# influxdb2

./: Cargo.toml
examples/: measurement.rs
src/: lib.rs
src/api/: buckets.rs  delete.rs  health.rs  label.rs  organization.rs  query.rs  ready.rs  setup.rs  task.rs  write.rs
src/models/: data_point.rs
tests/common/: server_fixture.rs
