[package]
name = "influxdb2"
version = "0.4.2"
authors = ["Armin Primadi <aprimadi@gmail.com>", "Paul Dix <paul@pauldix.net>"]
keywords = ["influxdb", "influxdb2", "influxdb-client"]
description = "Influxdb 2 client library for rust"
homepage = "https://github.com/aprimadi/influxdb2"
repository = "https://github.com/aprimadi/influxdb2"
license = "MIT"
edition = "2018"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies] # In alphabetical order
influxdb2-structmap = { version = "0.2.0", path = "./influxdb2-structmap" }
influxdb2-derive = { version = "0.1.1", path = "./influxdb2-derive" }

# crates.io dependencies
base64 = "0.21"
bytes = { version = "1.4", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.2"
fallible-iterator = "0.3.0"
futures = { version = "0.3", default-features = false }
go-parse-duration = "0.1"
ordered-float = "3.7"
reqwest = { version = "0.11", features = ["stream", "json"], default-features = false}
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
serde_qs = "0.12"
snafu = "0.7.4"
tempfile = "3.6.0"
tracing = "0.1"
url = "2.4.0"

[dev-dependencies] # In alphabetical order
mockito = "1.0.2"
num-traits = "0.2"
once_cell = { version = "1.18.0", features = ["parking_lot"] }
parking_lot = "0.12.1"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
test_helpers = { path = "./test_helpers" }
